# Babeltrace2-ROCpd-Plugin

./: README.md  README_Enhanced.md  bt_plugin_rocm.py  bt_plugin_rocm.py.multithread  bt_plugin_rocm_enhanced.py  bt_plugin_rocm_simple.py  pyproject.toml  requirements.txt  rocm_analysis_tracecompass.xml  rocm_analyzer.py  setup.py  setup.sh  test_enhanced_plugin.py  test_rocm_database.db  test_rocm_plugin.py
.github/workflows/: python.yml
examples/sample_trace/trace/: metadata
